# modaletta

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
discord/: README.md  modaletta.py  pyproject.toml
discord/examples/: example_bot.py
docs/: beads-integration-spec.md  bluesky-interaction-protocol.md  design-autonomous-infrastructure.md  design-mcp-tools.md
examples/: basic_agent.py  custom_tool_local_code_runner.py  modal_deployment.py  simple_custom_tool.py
modaletta/: CHANGELOG.md  MIGRATION_GUIDE.md  README.md  pyproject.toml
modaletta/examples/: manage_tools.py  test_tool_directly.py
modaletta/src/modaletta/: __init__.py  cli.py  client.py  config.py  digest.py  digest_config.yaml
modaletta/tests/: __init__.py
src/modaletta/: README_digest.md  TESTING_DIGEST_CRON.md  agent.py  cli.py  client.py  config.py  digest.py  digest_config.yaml  digest_cron.py
src/modaletta/scheduled/: __init__.py  wakeup.py
src/modaletta/webapp/: AUTH_SETUP.md  TESTING.md  TESTING_STREAMING.md  __init__.py  api.py  auth.py  authorization.py  authorized_users.yaml.example
src/modaletta/webapp/frontend/: app.js  index.html  login.html  styles.css  unauthorized.html
tests/: test_client.py  test_config.py  test_webapp_auth.py
